<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Rádio M80</string>    
    <string name="song_name_unavailable">Não disponível</string>
    <string name="artist_name_unavailable">Não disponível</string>
    <string name="dj_label">NO AR:</string>    
    <string name="unavailable_item">Não disponível</string>    
    <string name="about">Sobre</string>
    <string name="last_songs_title">Últimas Músicas</string>
    <string name="nowPlayingLabel">No Ar</string>
    <string name="traffic_label">Trânsito</string>
    <string name="frequencies_label">Frequências</string>     
    <string name="closestFrequency_label">Mais próximas</string>
    <string name="allFrequencies_label">Todas</string>
    <string name="frequenciesLoadingError">Não foi possível carregar lista de frequências</string>
    <string name="trafficLoadingError">Não foi possível obter informação de trânsito</string>
    <string name="sort_alphabetically">Ordenar por nome</string>
    <string name="sort_alphabetically_short">Por nome</string>
    <string name="sort_by_distance">Ordenar por proximidade</string>
    <string name="sort_by_distance_short">Mais próximas</string>
</resources>